2002-08-10  Michael Yount <csf@moscow.com>

	* lib/Mj/Access.pm:  (_a_mailfile)  Bugfix:  convert Mj::Addr
	objects into strings where necessary.  Thanks to Roger Klorese.

2002-08-09  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (tokeninfo_start)  Add support for
	the token_type access variable.

	* lib/Mj/Access.pm:  (_d_tokeninfo)  By default, deny use
	of the "tokeninfo-replace-part" command for confirm tokens.

	* lib/Mj/CommandProps.pm:  Add support for the token_type
	access variable.

	* lib/Mj/MIMEParser.pm:  (replace_part)  Bugfix:  Reparse
	the message file if part 0 was replaced.

2002-08-06  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (tokeninfo_start)  Add list-specific
	access check with no stall allowed as an interim solution
	for tokeninfo-edit security problems.  Thanks to Nick Simicich.

	* lib/Mj/CommandProps.pm:  Add access information for the
	tokeninfo command.  

	* lib/Mj/Format.pm: (tokeninfo)  Use the token's list to
	retrieve format files.  Thanks to Roger Klorese.

2002-08-05  Jason Tibbitts  <tibbs@math.uh.edu>

	* bin/mj_queuerun (parse_commands): 
	* bin/mj_email (parse_commands): Eliminate any default filename
	from the generated reply message.

2002-07-30  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (format_error)  Allow list-specific
	error file customization.
	(reject)  Account for the new session directory structure
	when attaching the session file.
	
	* lib/mj_cf_defs.pl:  Add "Disposition-Notification-To" to
	the delete_headers setting.  Suggested by Roger Klorese.

	* lib/Mj/Format.pm:  (accept, reject)  Use the token's list
	when retrieving format files.  
	Escape error message.  Thanks to Roger Klorese.

2002-07-28  Jason Tibbitts  <tibbs@math.uh.edu>

	* bin/mj_shell: Fix crash with -D.

	* lib/Majordomo.pm (_lists): Don't modify the values we get from
	_list_config_get; they're just references and changing them will
	change the internal structures.

2002-07-22  Michael Yount <csf@moscow.com>
